// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should show a negative count 1`] = `
<label
  class="characterCounter exceeded"
>
  -8 sulu_admin.characters_left
</label>
`;

exports[`Should show a negative count with numbers 1`] = `
<label
  class="characterCounter exceeded"
>
  -1 sulu_admin.characters_left
</label>
`;

exports[`Should show a positive count 1`] = `
<label
  class="characterCounter"
>
  7 sulu_admin.characters_left
</label>
`;

exports[`Should show a positive count if nothing is passed 1`] = `
<label
  class="characterCounter"
>
  20 sulu_admin.characters_left
</label>
`;

exports[`Should show a positive count with numbers 1`] = `
<label
  class="characterCounter"
>
  2 sulu_admin.characters_left
</label>
`;
